[project]
name = "lldb-typeinfo"
version = "2025.3.11.2"
description = "Additional type information for lldb"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/soda92/gdb-visualizer-1/tree/main/lldb_typeinfo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["lldb_typeinfo"]
exclude = ["__pycache__", "*.pyc", "*.exe", "*.exe~", "*.syso"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["lldb_typeinfo"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]
